# clash-sub-service

./: .gitignore  README.md  config.example.yaml  pyproject.toml
packaging/launchd/: com.lyratec.clash-sub-service.plist
packaging/macos_scripts/: postinstall  uninstall.sh
packaging/nuitka/: build_linux.sh  build_macos.sh  common.sh
packaging/systemd/: clash-sub-service.service
spec/: decisions.md  macos_deploy.md  tasks.md  ubuntu_deploy.md
src/: app.py  cli.py  exit_codes.py
src/app_logging/: filters.py  formatters.py  setup.py
src/config/: loader.py  schema.py
src/core/: clash_builder.py  fetcher.py  generator.py  parser.py
src/local_http/: __init__.py  server.py
src/models/: node.py
src/service/: __init__.py  config_watcher.py  refresher.py  runner.py  state.py
tests/: test_all.sh  test_app.py  test_builder.py  test_cli.py  test_fetcher.py  test_logging.py  test_parser.py  test_server.py  test_service.py  test_smoke.sh
tests/fixtures/: expected.yaml  subscription.txt
