[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clash-sub-service"
version = "0.1.1"
description = "Background service for fetching subscriptions and serving Clash YAML."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "colorlog>=6.8.2", "requests>=2.31.0", "watchdog>=4.0.0"]

[project.scripts]
clash-sub-service = "cli:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "nuitka>=2.4",
    "pytest>=8.3",
    "ruff>=0.6",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.32.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app", "cli", "exit_codes"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
